# dl_class_projects

./: .gitignore  .gitmodules  full cycle.ipynb  helpers.py  models.py  pyproject.toml  reproduce_final_submission.ipynb
.devcontainer/: devcontainer.json
CIFAR10-CNN/: .gitignore  pyproject.toml  sweep_config.yml  sweep_min.yml  train.py
CIFAR10-CNN/viz/: sweep_analysis.ipynb  sweep_collection_notebook.ipynb
CIFAR10-CNN/viz/custom_viewer/: base_viewer.py  drop_in.py  main.py  requirements.txt
CIFAR10-CNN/viz/example_data/: HistoryOfSweep.csv  SummaryOfSweep.csv
dl_experimentation/: full cycle.ipynb  helpers.py  reproduce_final_submission.ipynb
dl_experimentation/flow_train/: train.py
dl_experimentation/og_test_notebooks/: play_with_va.py.ipynb  spatial_49.ipynb  try_out_flow_match.ipynb  try_to_encode_data.ipynb  vae_scott.py
dl_experimentation/submissions/: marco_submission_old.py  marco_working_spatial.py
dl_experimentation/vae_train/: run_custom_train.py  run_info.py  run_sweep.py  sweep_config.yml
flow_train/: train.py
submissions/: marco_spatial_submission.py  marco_submission.py
vae_train/: e200_runs.txt  final_info.py  final_model_configs.json  run_custom_train.py  sweep_analysis.ipynb  sweep_config.yml  sweep_spatial_comparison.yaml  train.py
