[project]
name = "cifar10-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.49.1",
    "tqdm>=4.66.5",
    "wandb>=0.21.3",
]

[project.optional-dependencies]
# CPU build (Mac, CI, or non-CUDA systems)
cpu = [
  "torch>=2.6,<2.7",
  "torchvision>=0.21,<0.22"
]
